# whitenoise_flutter

./: .gitignore  CHANGELOG.md  README.md  architecture.md  flutter_rust_bridge.yaml  justfile  pubspec.yaml  zapstore.yaml
.context/: 01_rust_api.md
.cursor/rules/: flutter.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-apk.yml  ci.yml
.goose/memory/: ui_improvements.txt
android/app/: build.gradle.kts
docs/: DEBUGGIN.md  MIGRATION_COLORS_BUTTONS.md  migration_2024_colors_buttons.md  release.md
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: constants.dart
lib/config/extensions/: toast_extension.dart
lib/config/providers/: account_provider.dart  accounts_provider.dart  active_account_provider.dart  active_pubkey_provider.dart  auth_provider.dart  avatar_color_provider.dart  chat_input_provider.dart  chat_list_items_provider.dart  chat_list_sorting_provider.dart  chat_provider.dart  chat_search_provider.dart  contacts_provider.dart  create_group_provider.dart  create_profile_screen_provider.dart  delayed_relay_error_provider.dart  edit_profile_screen_provider.dart  filtered_chat_items_provider.dart  follow_provider.dart  follows_provider.dart  group_messages_provider.dart  group_provider.dart  localization_provider.dart  media_file_downloads_provider.dart  metadata_cache_provider.dart  nostr_keys_provider.dart  pinned_chats_provider.dart  polling_provider.dart  profile_provider.dart  profile_ready_card_provider.dart  profile_ready_card_visibility_provider.dart  relay_provider.dart  relay_status_provider.dart  theme_provider.dart  toast_message_provider.dart  user_profile_data_provider.dart  user_profile_provider.dart  welcomes_provider.dart
lib/config/states/: auth_state.dart  auth_state.freezed.dart  chat_search_state.dart  chat_search_state.freezed.dart  (+14 more)
lib/examples/: metadata_cache_examples.dart
lib/locales/: de.json  en.json  es.json  fr.json  i18n.ts  it.json  pt.json  ru.json  tr.json
lib/models/: relay_status.dart
lib/routing/: chat_navigation_extension.dart  router.dart  router_provider.dart  routes.dart
lib/services/: localization_service.dart
lib/shared/: custom_bottom_sheet.dart  custom_button.dart  custom_icon_button.dart  custom_textfield.dart
lib/utils/: clipboard_utils.dart  error_handling.dart  image_utils.dart  localization_extensions.dart  media_layout_calculator.dart  message_converter.dart  message_utils.dart  metadata_cache_utils.dart  pubkey_formatter.dart  pubkey_utils.dart  public_key_validation_extension.dart  reaction_converter.dart  relay_validation.dart  status_bar_utils.dart  string_extensions.dart  timeago_formatter.dart  user_utils.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
local-research/: go_router_implementation_plan.md
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: accounts.rs  contacts.rs  error.rs  groups.rs  media_files.rs  messages.rs  metadata.rs  mod.rs  relays.rs  users.rs  utils.rs  welcomes.rs
scripts/: BUILD_SYSTEM.md  build.sh  build_android.sh  build_ios.sh  check_diff_coverage.sh  setup_android_config.sh
test/: metadata_mixup_test.dart  test_helpers.dart
test/utils/: clipboard_utils_test.dart  image_utils_test.dart  media_layout_calculator_test.dart  message_converter_test.dart  pubkey_formatter_test.dart  reaction_converter_test.dart  relay_validation_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+365 files in other folders)
