[package]
name = "rust_lib_whitenoise"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
url = "2.5.1"


nostr-mls = { version = "0.43.0", git="https://github.com/rust-nostr/nostr", rev = "fadf1a6b3d8c5457e5a66d95d6c1677b4353e653" }
nostr-sdk = { version = "0.43.0", git="https://github.com/rust-nostr/nostr", rev = "fadf1a6b3d8c5457e5a66d95d6c1677b4353e653" }
# nostr-mls = {version = "0.43.0", path = "../../rust-nostr/mls/nostr-mls"}
# nostr-sdk = {version = "0.43.0", path = "../../rust-nostr/crates/nostr-sdk"}

thiserror = "2.0.12"

whitenoise = { version = "0.1.0", git = "https://github.com/parres-hq/whitenoise", rev = "f8b26fabec6d4ffbd689c0ffd91be8cfd82efe25" }
# whitenoise = { version = "0.1.0", path = "../../whitenoise" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
