[package]
name = "rust_lib_whitenoise"
version = "0.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
url = "2.5.1"


mdk-core = { version = "0.5.1", git="https://github.com/parres-hq/mdk", rev = "f9550e69be4f37919e95c84ee6c81b0e70d09b08" }
nostr-sdk = { version = "0.43", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
# nostr-mls = {version = "0.43.0", path = "../../rust-nostr/mls/nostr-mls"}
# nostr-sdk = {version = "0.43.0", path = "../../rust-nostr/crates/nostr-sdk"}

thiserror = "2.0.12"

whitenoise = { version = "0.1.0", git = "https://github.com/parres-hq/whitenoise", rev = "063f7b270d0b4bc32b891bc323197e07b3c6b752" }
# whitenoise = { version = "0.1.0", path = "../../whitenoise" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
